fix DocCacheStore.getKey  (#287)
* deleteXWikiDoc clear exists cache

* fix getKey

* contextualise ModelAccess.notifyEvent